Fixes for UI on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+*
+{
+    box-sizing: border-box;
+}
+
 body
 {
     margin: 0;
@@ -8,6 +13,12 @@ body
     background-color: #2c3e50;
     background: radial-gradient(circle, #2c3e50 0%, #000000 100%);
     font-family: 'Monserrat', sans-serif;
+}
+
+h1
+{
+    font-size: 1.4rem
+    margin 5px 0;
 }
 
 .app-container
@@ -47,9 +58,9 @@ select, button
 #myBoard
 {
     touch-action: none;
-    width: 95vw;
-    max-width: 450px;
-    margin: 10px auto;    
+    width: 92vw;
+    max-width: 400px;
+    margin: 5px auto;    
 }
 
 .container
@@ -57,7 +68,9 @@ select, button
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px
+    padding: 5px;
+    margin: 0;
+    overflow-x: hidden;
 }
 
 #flipBtn
